--- a/package.json
+++ b/package.json
@@ -2,10 +2,33 @@
   "name": "posbot-core",
   "version": "0.1.0",
   "description": "chat-bot core with integration bus",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "node-vk-bot-api": "github:feddot2517/node-vk-bot-api#ac6b61f5ff19e4143c5fd8201f5aa8fa41861bf1",
+    "telegraf": "^3.38.0"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "tslib": "^2.0.3",
+    "@types/node": "^14.11.8",
+    "typescript": "^4.0.3",
+    "prettier": "2.1.2"
+  },
   "author": "Posline",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/feddot2517/posbot-core.git"
+  },
+  "bugs": {
+    "url": "https://github.com/feddot2517/posbot-core/issues"
+  },
+  "homepage": "https://github.com/feddot2517/posbot-core#readme",
   "license": "MIT"
 }
