--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true,
-    "declaration": true,
+    "sourceMap": false,
     "outDir": "dist",
-    "strict": true
+    "strict": true,
+    "declaration": true,
+    "declarationDir": "dist/@types",
+    "rootDir": "src"
   },
   "exclude": [
     "node_modules",
